Fix free memory calculation.

The term "free memory" can mean different things: it can mean
1) absolutely/pure free physical memory (not consumed by anything) or
2) it can include the inactive part(s) of OS (file) cache(s) or
3) it can mean the maximum amount of physical memory that can be
allocated quickly without swapping and thus can also include the
active part(s) of OS cache(s).

This CL fixes base::AmountOfAvailablePhysicalMemory() to function
according to the 2nd meaning on all platforms where it is possible
because this is what everyone needs most of the time. (Win platform
has already had such implementation but others haven't).

BUG=672745

Review-Url: https://codereview.chromium.org/2558043007
Cr-Commit-Position: refs/heads/master@{#458291}

Former-commit-id: a4258cad75d8cc63170555cc74bd584b5bfca965